[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonovault"
version = "1.2.0"
description = "Python client for the SonoVault music metadata API — ISRC, ISWC, genre, labels, release dates, and cross-platform IDs for 90M+ tracks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Rekordcloud B.V." }]
keywords = [
  "music",
  "metadata",
  "isrc",
  "iswc",
  "music-api",
  "spotify",
  "apple-music",
  "tidal",
  "beatport",
  "discogs",
  "musicbrainz",
  "audio-recognition",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.25"]

[project.urls]
Homepage = "https://sonovault.now"
Documentation = "https://sonovault.now/docs"
Repository = "https://github.com/rekordcloud/sonovault-python"
Issues = "https://github.com/rekordcloud/sonovault-python/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/sonovault"]
